--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
+		"@skeletonlabs/skeleton": "^2.2.0",
+		"@skeletonlabs/tw-plugin": "^0.2.1",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-static": "next",
 		"@sveltejs/kit": "next",
 		"autoprefixer": "^10.4.14",
+		"flowbite-svelte-icons": "^0.4.4",
 		"mdsvex": "^0.10.6",
 		"postcss": "^8.4.27",
 		"rehype-autolink-headings": "^6.1.1",
@@ -35,6 +38,7 @@
 	"dependencies": {
 		"@picocss/pico": "^1.5.6",
 		"elizabot": "^0.0.3",
+		"js-sha256": "^0.10.1",
 		"prism-themes": "^1.9.0",
 		"remark": "^14.0.2",
 		"svelte-french-toast": "^1.0.3"
